<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView

        android:layout_width="374dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:background="@color/color_c1"
        android:padding="32dp"
        android:text="@string/app_title"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">
        <Button
            android:id="@+id/btnSP"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:fontFamily="casual"
            android:text="@string/msg_single_player"/>
        <Button
            android:id="@+id/btnMP"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:fontFamily="casual"
            android:text="@string/msg_multi_player"/>
        <Button
            android:id="@+id/btnInfo"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:fontFamily="casual"
            android:text="@string/msg_info"/>
        <Button
            android:id="@+id/btnHistory"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:fontFamily="casual"
            android:text="@string/msg_history"/>
    </LinearLayout>
</FrameLayout>